@@ -1,4 +1,4 @@
-﻿                                                      20.02.08 М1
+﻿                                                      23.02.08 М1
 
   М О Н И Т О Р-8 0  (3.6)   26.11.83М       (  МС " Д У Б Н А " ИАЭ  )             ШИФР    419999000000
 
@@ -28,7 +28,7 @@
            *SУSТЕМ
            *АLGОL
                    АLGОL*      01770
-                                                      20.02.08 М1
+                                                      23.02.08 М1
  А L G О L - Г Д Р
      (25.01.79)СВ-К
 
