@@ -1,4 +1,4 @@
-﻿                                                      20.02.08 М1
+﻿                                                      23.02.08 М1
 
   М О Н И Т О Р-8 0  (3.6)   26.11.83М       (  МС " Д У Б Н А " ИАЭ  )             ШИФР    419999000000
 
@@ -29,7 +29,7 @@
            *FULL LISТ
            *SУSТЕМ
                    FОRТR*      01770
-                                                      20.02.08 М1
+                                                      23.02.08 М1
  Ф О Р Т Р А Н
    /16.07.73/
                    СВDРR       35074
@@ -63,7 +63,7 @@
 
 
                    GLINК       35074
-                                                      20.02.08 М1
+                                                      23.02.08 М1
  АВТОКОД  МАDLЕN                                                   -   0027                     , UJ  ,  *L3
    (1.10.72)                                                      0026               *L2     :  , ВSS ,
                     МАIN    :  , NАМЕ,                                              С*****НАЧАЛО  ОПЕРАТОРА 8
