@@ -1,4 +1,4 @@
-﻿                                                      20.02.08 М1
+﻿                                                      23.02.08 М1
 
   М О Н И Т О Р-8 0  (3.6)   26.11.83М       (  МС " Д У Б Н А " ИАЭ  )             ШИФР    419999000000
 
@@ -25,7 +25,7 @@
 
 *NАМЕ РRЕТТУ РRINТ
            *ЕDIТ
-                                                      20.02.08 М1
+                                                      23.02.08 М1
  РЕДАКТОР ТЕКСТОВ
     (01.06.82)I
          *W
