@@ -1,4 +1,4 @@
-﻿                                                      20.02.08 М1
+﻿                                                      23.02.08 М1
 
   М О Н И Т О Р-8 0  (3.6)   26.11.83М       (  МС " Д У Б Н А " ИАЭ  )             ШИФР    419999000000
 
@@ -41,7 +41,7 @@
  LIВRАRУ ОТ  26.02.82 М3
            *РАSСАL
                    РАSСАL*     01770
-                                                      20.02.08 М1
+                                                      23.02.08 М1
  РАSСАL СОМРILЕR 15.0 (15.02.82)
  00000    1  0 (* ЦЕЛЫЕ ЧИСЛА ОТ 2 ДО 100: РЕШЕТО ЭРАТОСФЕНА *)
  00001    2  0 РRОGRАМ МАIN (ОUТРUТ);
